internal/xds/translator/testdata/out/xds-ir/authn-multi-route-single-provider.routes.yaml
- name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener
    routes:
    - match:
        path: foo/bar
      route:
        cluster: first-route
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: first-route
    - match:
        path: foo/baz
      route:
        cluster: second-route
      typedPerFilterConfig:
        envoy.filters.http.jwt_authn:
          '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.PerRouteConfig
          requirementName: second-route
